changes to weather forecast prediction app header

--- a/SampleApp/SampleApp.Api/wwwroot/index.html
+++ b/SampleApp/SampleApp.Api/wwwroot/index.html
@@ -30,12 +30,12 @@
 <body>
     <div class="jumbotron text-center">
         <h1>DevOps Rocks</h1>
-        <p>Sample Weather App</p>
+        <p>Sample Weather Forecast Prediction App</p>
     </div>
 
     <div class="container">
         <div class="row">
-            <span>Weather will be listed below:</span>
+            <span>Prediction:</span>
             <br />
             <ul class="list-group" id="weatherList"></ul>
         </div>
